<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/svScrollView"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="be.ehb.jenne.pocketevil.controller.SearchProfileActivity">

    <!-- toolbar -->
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_search_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark" />
    <!-- app:logo="@drawable/diablo3_icon_hdpi" -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/profileTextInput"
            android:hint="@string/edit_text_search_profile_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/profileSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileTextInput"
            android:layout_centerHorizontal="true"
            android:text="@string/button_search_profile" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileSearchButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp" />
    </RelativeLayout>
</LinearLayout>
