<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.ehb.jenne.pocketevil.controller.OverviewProfileActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/toolbar_overview_profile"/>
        <!-- app:logo="@drawable/diablo3_icon_hdpi" -->

    <android.support.design.widget.TabLayout
        android:id="@+id/tlTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        />

    <android.support.v4.view.ViewPager
        android:id="@+id/vpViewPager"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        />

</LinearLayout>
